# pacmanQuery

./: .gitignore  CMakeLists.txt  scan.cc
